src/test/deca/context/invalid/cond_if_but_float.deca
// Test of the rule 3.29 : if should have a boolean as a condition

{
    float cond = 3.14;
    if (cond){

    };
}
